<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/BigBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about11"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/thank"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#86B722" />

        <TextView
            android:id="@+id/main_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_screen"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/main_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/mainImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/main1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/main_shot" />

        <TextView
            android:id="@+id/main_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/main2"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#86B722" />

        <TextView
            android:id="@+id/Sched1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedules"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/Sched2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sched1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/schedImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/schedules"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/sched_shot" />

        <TextView
            android:id="@+id/sched_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/making_a_time_schedule_"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/sched3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/sched2"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/sched_allDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/making_an_all_day_schedule_"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/sched4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/sched3"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#86B722" />

        <TextView
            android:id="@+id/usingLocs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/using_locations"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/locsImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/using_locations"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/locs_shot" />

        <TextView
            android:id="@+id/locsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/locs1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#86B722" />

        <TextView
            android:id="@+id/credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/credits"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</ScrollView>
