<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/list_padding" >

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/credits"
        android:src="@drawable/back_arrow"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/home_or_work_"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:nextFocusDown="@+id/address">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/or_define_it_manually"
        android:inputType="textPostalAddress"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/hint_on_accurate_address"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/secondaryColor"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fitsSystemWindows="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/getLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/custom_btn_green"
            android:padding="6dp"
            android:text="@string/get_gps_location" />

        <TextView
            android:id="@+id/latAndLong"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:background="@color/rowColor"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:text="@string/lat_xx_xxxxxx_nlng_xx_xxxxxx"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/save"
            android:layout_width="70dp"
            android:layout_height="38dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_btn_green"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>