<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="@drawable/custom_row_bg"
    android:gravity="center"
    android:minHeight="@dimen/list_item_height"
    android:orientation="vertical"
    android:paddingLeft="@dimen/list_padding"
    android:paddingRight="@dimen/list_padding" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/list_icon"
            android:layout_height="@dimen/list_icon"
            android:layout_marginEnd="@dimen/list_padding"
            android:layout_marginRight="@dimen/list_padding"
            android:adjustViewBounds="true"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/_schedules_"
            android:scaleType="fitXY"
            android:src="@drawable/wifi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tim"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/test_23_00_09_00"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/place"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/test_mon_tue_wed_thu_fri_sat_sun"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>