<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_new_color"
        android:gravity="center_vertical"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/newButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_for_new_location"
            android:cropToPadding="true"
            android:fadingEdge="vertical"
            android:fitsSystemWindows="false"
            android:maxHeight="70dp"
            android:maxWidth="70dp"
            android:paddingBottom="5dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/custom_plus" />

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/credits"
            android:src="@drawable/back_arrow"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_centerInParent="true"
            android:text="@string/saved_locations"
            android:textAppearance="?android:attr/textAppearanceLarge"
         />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/listLocs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@color/dividerColor"
            android:dividerHeight="@dimen/list_space" >
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/listLocs"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/push_to_edit_hold_down_to_delete"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/second_color" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>