<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:longClickable="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/themeColor"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="14dp"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/credits"
            android:src="@drawable/nyt_logo"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/_schedules_"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/newButton"
            android:layout_toRightOf="@+id/imageView1" >

            <View
                android:id="@+id/View01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:orientation="vertical" >

                <ToggleButton
                    android:id="@+id/toggleWifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/wifi"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:orientation="vertical" >

                <ToggleButton
                    android:id="@+id/toggleBT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bluetooth"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <View
                android:id="@+id/View02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <ImageView
            android:id="@+id/newButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/linearLayout3"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_for_new_location"
            android:cropToPadding="true"
            android:fadingEdge="vertical"
            android:fitsSystemWindows="false"
            android:maxHeight="65dp"
            android:maxWidth="65dp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:src="@drawable/custom_plus"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/listLocs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@color/dividerColor"
            android:dividerHeight="@dimen/list_space"
            android:scrollbars="vertical"
            app:context=".MainActivity" >
        </android.support.v7.widget.RecyclerView>

        <dk.klaus.timesaver.FloatingActionButton
            android:id="@+id/fabbutton"
            android:layout_width="@dimen/add_button"
            android:layout_height="@dimen/add_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/push_to_edit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/second_color" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/hold_down_to_delete"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/second_color" />
    </LinearLayout>

</LinearLayout>